<resources>
    <string name="app_name">smartEstateApp</string>

    <!--Entry fragment-->
    <string name="welcome_string">Добро пожаловать\nв Умную Недвижимость</string>
    <string name="register_button_string">Войти с помощью почты</string>

    <!--Sign fragments-->
    <string name="add_mail">Введите почту</string>
    <string name="add_password">Введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="not_register">Еще не зарегистрированы?</string>
    <string name="add_password_again">Введите пароль еще раз</string>
    <string name="already_register">Уже зарегистрированы? Жмите сюда</string>

    <!--Smart Search fragment-->
    <string name="smart_search_bar_text">Умный поиск</string>
    <string name="set_parameters_text">Задайте параметры</string>
    <string name="set_parameters_description_text">которые помогут нам предсказать\nцену на недвижимость</string>
    <string name="where_to_find_text">Где искать</string>
    <string name="house_type_text">Тип дома</string>
    <string name="level_text">Этаж</string>
    <string name="levels_text">Всего этажей</string>
    <string name="city_text">Город</string>
    <string name="secondary">Вторичка</string>
    <string name="new_estate_text">Новостройка</string>
    <string name="all_estates_text">Все</string>
    <string name="any_house_type_text">Выберите тип</string>
    <string name="from_input_text">От</string>
    <string name="to_input_text">До</string>
    <string name="number_of_rooms_text">Количество комнат</string>
    <string name="total_area_text">Общая площадь</string>
    <string name="kitchen_area_text">Площадь кухни</string>
    <string name="predict_price_text">Узнать цену</string>
    <string-array name="house_types">
        <item>Любое</item>
        <item>Другие</item>
        <item>Панельный</item>
        <item>Монолитный</item>
        <item>Кирпичный</item>
        <item>Блочный</item>
        <item>Деревянный</item>
    </string-array>

    <!--Predict fragment-->
    <string name="predicting_price_text">Предсказываем\nцену</string>

    <!--Estate Cost Predicted fragment-->
    <string name="estate_predicted_cost_text">Цена за квартиру\nбудет</string>
    <string name="lets_find_estate_by_cost">Давайте подберем квартиры\nпо выбранной вами\nцене и городу</string>
    <string name="show_estates">Показать квартиры</string>

    <!--Classical Search fragment-->
    <string name="classical_search_bar_text">Классический поиск</string>
    <string name="clear_filters_text">Очистить\nфильтры</string>

    <!--Filter Classical Search fragment-->
    <string name="classical_cost_text">Цена</string>
    <string name="classical_filters_ready_text">Готово</string>

    <!--Favourites fragment-->
    <string name="favourites_bar_text">Избранное</string>

    <!--User fragment-->
    <string name="change_user_settings_text">Добавить данные</string>
    <string name="user_login_text">Логин</string>
    <string name="user_mail_text">Почта</string>
    <string name="user_estates_text">Ваши объявления</string>
    <string name="add_user_login_text">Добавьте логин</string>
    <string name="add_user_name_text">Добавьте имя</string>

    <!--User Settings fragment-->
    <string name="user_name_text">Имя</string>
    <string name="user_name_text_input_text">Введите ваше имя</string>
    <string name="user_login_text_input_text">Введите ваш логин</string>
    <string name="user_mail_text_input_text">Введите вашу почту</string>
    <string name="settings_ready_text">Готово</string>

    <!--Add Estate fragment-->
    <string name="add_estate_text">Разместить\nобъявление</string>
    <string name="add_cost_value_text">Введите цену</string>
    <string name="photo_text">Фото</string>
    <string name="add_photo_text">Добавьте фото</string>
    <string name="add_level_text">Добавьте ваш этаж</string>
    <string name="add_levels_text">Добавьте всего этажей</string>
    <string name="add_total_area_text">Добавьте общую площадь</string>
    <string name="add_rooms_text">Добавьте количество комнат</string>
    <string name="add_kitchen_area_text">Добавьте площадь кухни</string>
    <string name="add_estate_ready_text">Готово</string>

    <!--Adding Estate fragment-->
    <string name="adding_estate_text">Добавляем ваше\nобъявление</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>