<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".presentation.add.estate.AddEstateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/margin_horizontal_screen"
        android:paddingVertical="@dimen/margin_horizontal_screen">

        <TextView
            android:id="@+id/add_estate_bar_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_large"
            android:text="@string/add_estate_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cost_value_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_medium"
            android:text="@string/classical_cost_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_estate_bar_text_view" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_input"
            style="@style/TextInputViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cost_value_text_view">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextViewRegularSecondarySmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_cost_value_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/photo_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_medium"
            android:text="@string/photo_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cost_input" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/photo_input"
            style="@style/TextInputViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_text_view">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextViewRegularSecondarySmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_photo_text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_large"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_input"
            app:singleSelection="true">

            <Button
                android:id="@+id/button1"
                style="@style/OutlineButtonRegularTexViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/all_estates_text" />

            <Button
                android:id="@+id/button2"
                style="@style/OutlineButtonRegularTexViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondary" />

            <Button
                android:id="@+id/button3"
                style="@style/OutlineButtonRegularTexViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_estate_text" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/where_to_find_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_medium"
            android:text="@string/where_to_find_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleButton" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_input"
            style="@style/TextInputViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/where_to_find_text_view">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextViewRegularSecondarySmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/house_type_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_medium"
            android:text="@string/house_type_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_house_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_small"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_edit"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_edit"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_edit"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_edit"
            app:layout_constraintTop_toBottomOf="@+id/house_type_text_view">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                style="@style/TextViewRegularSecondarySmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/any_house_type_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/level_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_medium"
            android:text="@string/level_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_house_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/level_from_input"
            style="@style/TextInputViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_small"
            android:layout_marginEnd="@dimen/margin_horizontal_input_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level_text_view">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextViewRegularSecondarySmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_level_text" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/levels_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_medium"
            android:text="@string/levels_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level_from_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/levels_from_input"
            style="@style/TextInputViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_small"
            android:layout_marginEnd="@dimen/margin_horizontal_input_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/levels_text_view">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextViewRegularSecondarySmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/levels_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/number_of_rooms_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_medium"
            android:text="@string/number_of_rooms_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/levels_from_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_of_rooms_from_input"
            style="@style/TextInputViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_small"
            android:layout_marginEnd="@dimen/margin_horizontal_input_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_rooms_text_view">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextViewRegularSecondarySmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_rooms_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/total_area_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_medium"
            android:text="@string/total_area_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_rooms_from_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/total_area_from_input"
            style="@style/TextInputViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_small"
            android:layout_marginEnd="@dimen/margin_horizontal_input_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_area_text_view">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextViewRegularSecondarySmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_total_area_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/kitchen_area_text_view"
            style="@style/TextViewSemiBoldMainSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_medium"
            android:text="@string/kitchen_area_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_area_from_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kitchen_area_from_input"
            style="@style/TextInputViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_small"
            android:layout_marginEnd="@dimen/margin_horizontal_input_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kitchen_area_text_view">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextViewRegularSecondarySmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_kitchen_area_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/predict_cost_button"
            style="@style/MaterialButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_vertical_button"
            android:text="@string/add_estate_ready_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>